# DamDataPredictionAndTypeEvaluation

./: CITATION.cff  Decision_Tree.py  LICENSE  LSTM.py  PatchTST.py  README.md  XGBoost.py  environment.yml  pyproject.toml  requirements.txt  wavelet_and_isoloation_forest.py
paper/: 250729_WRX_manuscript_final.docx
src/dam_monitoring/preprocess/: wavelet_iso.py
src/dam_monitoring/utils/: io.py  metrics.py
tests/: test_imports.py  test_preprocess.py
